--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,11 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.18.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.0.0"
+    "mongoose": "^7.8.7"
   }
 }
